--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -60,6 +60,7 @@
     font-size: 15px;
     font-weight: 500;
     background: white;
+    font-family: "Montserrat";
     cursor: pointer;
 }
 .nav-login-cart button:active{
