--- a/frontend/src/Pages/Tienda/Tienda.scss
+++ b/frontend/src/Pages/Tienda/Tienda.scss
@@ -36,8 +36,8 @@
     border-radius: 1px;
     border: 1px solid black;
     margin-bottom: 10%;
-    margin-left: 35%;
-    margin-top: -15%;
+    margin-left: 32%;
+    margin-top: -17%;
 }
 .banners{
     display: flex;
@@ -75,4 +75,68 @@
 }
 .producs img{
     width: 83%;
+}
+
+.proddes{
+    width: 100%;
+    display: flex;
+    grid-template-columns: repeat(3, 0fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 75px;
+    justify-items: center;
+    justify-content: center;
+
+    .productosss{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        cursor: pointer
+   
+
+    img {
+        width: 100%;
+      }
+  
+      p {
+        text-align: center;
+        font-size: 10pt;
+      }
+    }    
+}
+
+.prodeuni{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 0fr);
+    grid-row-gap: 20px;
+    grid-column-gap: 75px;
+    justify-items: center;
+    justify-content: center;
+
+    .productosinte{
+        width: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        cursor: pointer
+    
+
+    img {
+        width: 100%;
+      }
+  
+      p {
+        text-align: center;
+        font-size: 10pt;
+      }
+    }
 }
