--- a/frontend/src/Pages/Tienda/Tienda.scss
+++ b/frontend/src/Pages/Tienda/Tienda.scss
@@ -95,7 +95,7 @@
         gap: 10px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        cursor: pointer
+        cursor: pointer;
    
 
     img {
@@ -127,7 +127,7 @@
         gap: 10px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        cursor: pointer
+        cursor: pointer;
     
 
     img {
