fix bugs en parte para obtener categorias , tambien para obtener el rol del usuario en back, en front: agrege lo de los articulos, tambien las opciones si se inicia como administrador , diseñador o cliente junto a sus opciones tambien se agrego ya la opcion de compra junto a lo de las tallas

--- a/frontend/src/Components/RelatedProducts/RelatedProducts.scss
+++ b/frontend/src/Components/RelatedProducts/RelatedProducts.scss
@@ -25,7 +25,7 @@
 }
 
 .produtinte{
-    width: 100%;
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,6 +39,7 @@
 
 img {
     width: 100%;
+    height: 40vh;
   }
 
   p {
