--- a/frontend/src/CartItems/CartItems.scss
+++ b/frontend/src/CartItems/CartItems.scss
@@ -10,17 +10,17 @@
 
 .cartitems-format-main {
     display: grid;
-    grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
     gap: 75px;
     padding: 20px 0px;
     color: #454545;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600;
 }
 
 .cartimes-format {
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 500;
 }
 
@@ -106,4 +106,11 @@
     background: black;
     color: white;
     cursor: pointer;
+}
+
+.droptallas{
+    width: 94px;
+    height: 40px;
+    border: 2px solid #ebebeb;
+    background: #fff;
 }
