--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -80,3 +80,16 @@
     color: white;
 }
 
+.admin-dropdown select{
+    width: 130px;
+    height: 40px;
+    outline: none;
+    border: 1px solid #7a7a7a;
+    border-radius: 75px;
+    color: #515151;
+    font-size: 15px;
+    font-weight: 500;
+    background: white;
+    font-family: "Montserrat";
+    cursor: pointer;
+}
