--- a/frontend/src/Pages/Tienda/Tienda.scss
+++ b/frontend/src/Pages/Tienda/Tienda.scss
@@ -101,7 +101,8 @@
    
 
     img {
-        width: 100%;
+        width: 150px;
+        height: 30vh;
       }
   
       p {
@@ -137,6 +138,7 @@
 
     img {
         width: 100%;
+        height: 30vh;
       }
   
       p {
