realizacion del filtro de los articulos + la lista de compras del cliente

--- a/frontend/src/CartItems/CartItems.scss
+++ b/frontend/src/CartItems/CartItems.scss
@@ -41,6 +41,10 @@
     background: #fff;
 }
 
+.cartimes-format select{
+    border: 2px solid #ebebeb;
+    background: #fff;
+}
 .cartitems-down {
     display: flex;
     margin: 100px 0px;
