realizacion completa del area del administrador excepto lo del diseño lo que falta lo deje en el grupo

--- a/frontend/src/Pages/Tienda/Tienda.scss
+++ b/frontend/src/Pages/Tienda/Tienda.scss
@@ -168,6 +168,8 @@
     cursor: pointer;
     height: 5vh;
     width: 180px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .filtros select{
