se ajusto el modelo del diseño y se agrego el boton para los usuarios que vean los diseños y en los productos personalizables los inputs de descripcion , imagen y el boton

--- a/frontend/src/Components/ProductDisplay/ProductsDis.scss
+++ b/frontend/src/Components/ProductDisplay/ProductsDis.scss
@@ -94,3 +94,15 @@
 .productdisplay-right-category span{
     font-weight: 600;
 }
+
+.productdisplay-customization button{
+    margin-top: 5%;
+}
+
+.imagendes{
+    margin-top: 3%;
+}
+
+.productdisplay-customization input{
+    margin-left: 2%;
+}
